Fix build errors with JDK 8